<resources>
  <string name="app_name">MaterialDesginApplication</string>

  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>

  <string name="action_settings">Settings</string>

  <string name="app_description">Android drawer icon with material design animation</string>
  <string name="drawer_open">drawer_open</string>
  <string name="drawer_close">drawer_close</string>
  <string name="no_login">未登录</string>
  <string name="hint_username">请输入用户名</string>
  <string name="et_pwd_hint">请输入密码</string>
  <string name="et_pwd_confirm_hint">请再次输入密码</string>
  <string name="back">返回</string>
  <string name="finish">完成</string>
  <string name="user_login">登录</string>
  <string name="user_register">注册</string>


  <!--注册页面-->
  <string name="register_common_phone_num">您的常用手机号码</string>
  <string name="register_phone_num">手机号码</string>
  <string name="register_phone_num_prefix">+86</string>
  <string name="register_read_and_agree">阅读并同意</string>
  <string name="register_user_agreement">《用户协议及隐私条款》</string>
  <string name="register_send_identify_code">发送验证码</string>
  <string name="register_phone_format_error">请输入正确手机号</string>

  <!--验证码页面-->
  <string name="identify_input_6_identify_code">输入6位验证码</string>
  <string name="identify_send_code_success">验证码已发送成功</string>
  <string name="identify_resend_identify_code_interval">秒后可重新发送</string>
  <string name="identify_resend_identify_code">重新发送</string>
  <string name="identify_identify_code">验证码</string>

  <!--创建登录密码页面-->
  <string name="build_create_password">请输入您的密码</string>
  <string name="build_create_password_tip">6-20位字母或数字</string>
  <string name="build_register_and_login">注册并登录</string>

  <!--登录页面-->
  <string name="login_user_register">新用户注册</string>
  <string name="login_user_password">密码</string>
  <string name="login_forget_user_password">忘记密码</string>
  <string name="login_input_phone_num">请输入手机号</string>
  <string name="login_input_password">请输入密码</string>
  <string name="login_phone_or_password_error">手机号或密码错误</string>
  <string name="login_password_error">密码错误</string>
  <string name="login_user_login">登录</string>
  <string name="login_user_login_success">登录成功</string>


  <!--数据库-->
  <string name="note_add">添加</string>
  <string name="note_delete">删除</string>
  <string name="note_edit">编辑</string>
  <string name="note_query">查询</string>
  <string name="note_query_success">查询成功</string>


  <string name="select_success">已选好</string>
  <string name="cancel">取消</string>
  <string name="select_medic_box_num">请选择药仓</string>
  <string name="medic_box_no_code">空</string>
  <string name="sure">确定</string>

  <string name="box_open_first">• 请打开对应药仓盖</string>
  <string name="box_open_second">• 清空该药仓其他药品</string>
  <string name="box_close_first">• 请确认需要放入的药品</string>
  <string name="box_close_second">• 放入药品并关闭仓盖</string>
</resources>
