<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/white"
  android:orientation="vertical">
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:layout_marginTop="30dp"
    android:orientation="horizontal">
    <TextView
      android:id="@+id/tv_note_add"
      style="@style/common_blue_button"
      android:layout_width="70dp"
      android:layout_marginLeft="5dp"
      android:text="@string/note_add" />
    <TextView
      android:id="@+id/tv_note_delete"
      style="@style/common_blue_button"
      android:layout_width="70dp"
      android:layout_marginLeft="15dp"
      android:text="@string/note_delete" />
    <TextView
      android:id="@+id/tv_note_edit"
      style="@style/common_blue_button"
      android:layout_width="70dp"
      android:layout_marginLeft="15dp"
      android:text="@string/note_edit" />
    <TextView
      android:id="@+id/tv_note_query"
      style="@style/common_blue_button"
      android:layout_marginLeft="15dp"
      android:layout_width="70dp"
      android:text="@string/note_query" />

  </LinearLayout>

  <ListView
    android:id="@+id/listView"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:cacheColorHint="@color/transparent"
    android:divider="@color/transparent"
    android:dividerHeight="0dp"
    android:fastScrollEnabled="false"
    android:listSelector="@android:color/transparent"
    android:overScrollMode="never"
    android:scrollbars="none"/>

</LinearLayout>
