<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/timePicker1"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="@color/white"
  android:orientation="vertical">

  <TextView
    style="@style/s_999999_18"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:layout_gravity="center_horizontal"
    android:text="@string/select_medic_box_num" />

  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="44dp"
    android:layout_gravity="center_horizontal"
    android:orientation="horizontal">

    <LinearLayout
      android:id="@+id/ll_nums"
      android:layout_width="200dp"
      android:layout_height="wrap_content"
      android:orientation="vertical" />
  </LinearLayout>


  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="48dp"
    android:layout_marginTop="30dp"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="40dp"
      android:layout_weight="1"
      android:layout_marginLeft="11dp"
      android:gravity="center"
      android:orientation="vertical">

      <RelativeLayout
        android:id="@+id/rl_select_cancel_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
          android:id="@+id/tv_medic_plan_cancel"
          style="@style/s_999999_16"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerInParent="true"
          android:gravity="center"
          android:text="@string/cancel" />
      </RelativeLayout>
    </LinearLayout>

    <TextView
      android:layout_width="1dp"
      android:layout_height="match_parent"
      android:layout_marginTop="12dp"
      android:layout_marginBottom="12dp"
      android:background="@color/cut_line" />

    <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="40dp"
      android:layout_weight="1"
      android:layout_marginRight="11dp"
      android:gravity="center"
      android:orientation="vertical">

      <RelativeLayout
        android:id="@+id/rl_select_sure_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
          android:id="@+id/tv_medic_plan_sure"
          style="@style/s_2bb2ba_16"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerInParent="true"
          android:gravity="center"
          android:text="@string/select_success" />
      </RelativeLayout>
    </LinearLayout>
  </LinearLayout>
</LinearLayout>

